--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.8.1",
     "@unipasswallet/popup-sdk": "^0.0.9",
     "@unipasswallet/popup-types": "^0.0.3",
+    "@vercel/analytics": "^0.1.11",
     "ahooks": "^3.4.1",
     "classnames": "^2.3.1",
     "ethers": "^5.6.8",
